# Optizelle

./: AUTHORS  AUTHORS.txt  BFGS.cpp  BFGSinv.cpp  CMakeLists.txt  GaussNewton.cpp  LICENSE  Makefile.am  Makefile.in  Newton.cpp  PEopt.hpp  README  README.md  SR1.cpp  SR1inv.cpp  aclocal.m4  bfgs_eval.m  bfgs_test.m  build_c.m  build_compact_bfgs.m  build_dense_sr1.m  configure  configure.ac  core.h  diagnostic_checks.m  diagnostic_checks_auxiliary.m  diagnostic_checks_objective.m  diff_operator.h  example_1d.json  example_1d_extruded.json  example_1d_extruded.m  example_2d.m  f.cpp  fp.cpp  fpps.cpp  fps.cpp  generate_interpolant.m  generate_lenses.m  generate_objective.m  generate_parametrization.m  (+14 more)
licenses/: CMakeLists.txt  jsonlab.txt  matlab.txt  numpy.txt  optizelle.txt  wix.txt
src/: CMakeLists.txt
src/cmake/DragNDrop/: ReadMe.txt  com.optimojoe.optizelle.plist
src/cmake/Modules/: AddExample.cmake  AddOptizelleExampleCpp.cmake  AddOptizelleExampleMatlab.cmake  AddOptizelleExamplePython.cmake  AddOptizelleExampleSupporting.cmake  AddOptizelleJsonTestCpp.cmake  AddOptizelleJsonTestMatlab.cmake  AddOptizelleJsonTestPython.cmake  AddOptizelleMex.cmake  AddOptizelleSDPACpp.cmake  AddOptizelleTest.cmake  AddOptizelleTestCpp.cmake  AddOptizelleTestMatlab.cmake  AddOptizelleTestPython.cmake  AddOptizelleUnitCpp.cmake  AddOptizelleUnvalidatedJsonTestMatlab.cmake  AddSDPATest.cmake  FindBLAS.cmake  FindBoostUnitTest.cmake  FindJsonCpp.cmake  FindJsonlab.cmake  FindLAPACK.cmake  FindMATLAB.cmake  FindOctave.cmake  Optizelle.cmake  UseLATEX.cmake
src/cmake/WiX/: patch.xml
src/cpp/: CMakeLists.txt
src/cpp/core/: peopt.h  vspaces.h
src/cpp/examples/: CMakeLists.txt
src/cpp/optizelle/: CMakeLists.txt  exception.cpp  exception.h  json.cpp  json.h  linalg.cpp  linalg.h  optizelle.cpp  optizelle.h  stream.cpp  stream.h  stream.tpp  vspaces.cpp  vspaces.h
src/cpp/peopt/: CMakeLists.txt  json.h  linalg.cpp  linalg.h  peopt.cpp  peopt.h  vspaces.cpp  vspaces.h
src/cpp/unit/: CMakeLists.txt  capture_and_release.cpp  derivative_check.cpp  diff_restart.cpp  linear_algebra.cpp  linear_cone.cpp  quadratic.cpp  quadratic_cone.cpp  rosenbrock.cpp  sdp_cone.cpp
src/doc/: .gitignore  CMakeLists.txt  CMakePathConfigure.txt  allocateCodomainExample.tex  constraintExample.tex  constraintSpecification.tex  file.cpp  file.h  file.tpp  functionBundleSpecification.tex  initialGuessExample.tex  jsonReaderExample1.tex  jsonReaderExample2.tex  jsonReaderSpecification.tex  master.tex  messagingSpecification.tex  objectiveExample.tex  objectiveSpecification.tex  optizelle.bib  optizelle.tex  peopt.tex  process_config.cpp  rosen_code.tex  rosen_input.tex  rosen_output.tex  rosen_output.txt  simple_con_code.tex  simple_con_input.tex  simple_con_output.tex  simple_eq_code.tex  simple_eq_input.tex  simple_eq_output.tex  simple_ineq_code.tex  simple_ineq_input.tex  simple_ineq_output.tex  solutionExtractionSpecification.tex  solverSpecification.tex  stateSpecification.tex  vectorSpaceSpecification.tex
src/doc/pp/: optizelle.tex.cpp
src/examples/: CMakeLists.txt
src/examples/computation_caching/: CMakeLists.txt  computation_caching.m  driver_full_space.m  driver_reduced_space.m  full_space.json  generate_convection.m  generate_convection_bd.m  generate_diffusion.m  generate_diffusion_bd.m  generate_full_space.m  generate_params.m  generate_reduced_space.m  reduced_space.json
src/examples/diagnostic_checks/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  diagnostic_checks.cpp  diagnostic_checks.m  diagnostic_checks.py
src/examples/inequality_scaling/: CMakeLists.txt  inequality_scaling.cpp  inequality_scaling.m  inequality_scaling.py  newton_cg.json  newton_cg_backtracking.json  sr1.json  tr_newton.json  tr_sd.json
src/examples/mlp/: diagnostic_checks_objective.m  example_1d.m  example_2d.m
src/examples/nw_sqp_exercise/: CMakeLists.txt  nw_sqp_exercise.cpp  nw_sqp_exercise.m  nw_sqp_exercise.py  sr1.json  tr_newton.json
src/examples/parest/: CMakeLists.txt  genEqualityConstrained.m  genUnconstrained.m  parest.m  tr_newton.json
src/examples/perceptron/: CMakeLists.txt  diagnostic_checks_auxiliary.m  diagnostic_checks_objective.m  example_1d.json  example_1d.m  example_1d_extruded.json  example_1d_extruded.m  example_2d.json  example_2d.m  generate_hyperbolic.m  generate_interpolant.m  generate_lenses.m  generate_logistic.m  generate_objective.m  generate_parametrization.m  generate_scaling.m  generate_scaling_operator.m  perceptron.m
src/examples/quadratic/: CMakeLists.txt  bfgs.json  fletcher_reeves.json  hestenes_stiefel.json  newton_cg.json  newton_cg_backtracking.json  polak_ribiere.json  precon_fletcher_reeves.json  precon_hestenes_stiefel.json  precon_polak_ribiere.json  quadratic.cpp  quadratic.m  quadratic.py  sr1.json  tr_newton.json
src/examples/rosenbrock/: CMakeLists.txt  Makefile.in  bfgs.json  newton_cg.json  newton_cg_backtracking.json  precon_fletcher_reeves.json  precon_hestenes_stiefel.json  precon_polak_ribiere.json  rosenbrock.cpp  rosenbrock.m  rosenbrock.py  sr1.json  tr_newton.json
src/examples/rosenbrock_advanced_api/: CMakeLists.txt  bfgs.json  newton_cg.json  newton_cg_backtracking.json  precon_fletcher_reeves.json  precon_hestenes_stiefel.json  precon_polak_ribiere.json  restart.json  rosenbrock_advanced_api.cpp  rosenbrock_advanced_api.m  rosenbrock_advanced_api.py  sr1.json  tr_newton.json
src/examples/rosenbrock_easy/: Makefile.in
src/matlab/: CMakeLists.txt  Makefile.am  Makefile.in  getProblemClass.cpp  matlab.h  peopt.cpp  readme_windows.txt  run.m  setupOptizelle.m
src/matlab_octave/: CMakeLists.txt  readme_windows.txt  setupOptizelle.m
src/peopt/: Makefile.am  Makefile.in  json.h  linalg.cpp  linalg.h  peopt.h
src/preprocess/: CMakeLists.txt  exception.cpp  stream.h  stream.tpp
src/python/: CMakeLists.txt  Makefile  peopt.cpp  peopt.py  peopt_cython.h  setup.py
src/unit/: CMakeLists.txt  Makefile.am  Makefile.in  capture_and_release.cpp  linear_algebra.cpp  linear_cone.cpp  quadratic_cone.cpp  rosenbrock.cpp  sdp_cone.cpp
(+820 files in other folders)
