# Check if we want to build any examples 
mark_as_advanced(CLEAR ENABLE_CPP_EXAMPLES)
set(ENABLE_CPP_EXAMPLES OFF CACHE BOOL "Enable examples for C++?")
if(ENABLE_PYTHON)
    mark_as_advanced(CLEAR ENABLE_PYTHON_EXAMPLES)
    set(ENABLE_PYTHON_EXAMPLES OFF CACHE BOOL "Enable examples for Python?")
endif()
if(ENABLE_MATLAB)
    mark_as_advanced(CLEAR ENABLE_MATLAB_EXAMPLES)
    set(ENABLE_MATLAB_EXAMPLES OFF CACHE BOOL "Enable examples for MATLAB?")
endif()

# Add all examples or unit tests
add_subdirectory(diagnostic_checks)
add_subdirectory(nw_sqp_exercise)
add_subdirectory(parest)
add_subdirectory(quadratic)
add_subdirectory(rosenbrock)
add_subdirectory(rosenbrock_advanced_api)
add_subdirectory(simple_inequality)
add_subdirectory(simple_infeasible_inequality)
add_subdirectory(simple_quadratic_cone)
add_subdirectory(simple_sdp_cone)
add_subdirectory(simple_equality)
add_subdirectory(simple_constrained)
add_subdirectory(simple_constrained_advanced_api)
add_subdirectory(sdpa_sparse_format)
add_subdirectory(perceptron)
add_subdirectory(inequality_scaling)
add_subdirectory(sql_restart)
add_subdirectory(computation_caching)
